apps/argocd/middleware-basicauth.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: argocd
spec:
  basicAuth:
    secret: basic-auth
