apps/argocd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-route53"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: argocd-basic-auth@kubernetescrd
spec:
  tls:
    - hosts:
        - argocd.homelab.sbhi.io
      secretName: argocd-server-tls # cert-manager will create this certificate
  rules:
    - host: argocd.homelab.sbhi.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80 # ArgoCD listens on 80 thanks to the --insecure flag
